configurando la logica para implemntar las excepciones en salesEntity